# add_kernel

./: CMakeLists.txt  README.md  bench.ps1  kernels.cu  kernels.cuh  main.cu  measurePCIeBandwidth.cu
kernels/: basic.ptx  constuint.ptx
old/: kernels.cu  kernels.cuh
ptx/: naive.ptx  thread_block.ptx
src/: bench.cpp  bench.h  cuda_utils.h  data.h  main.cpp
src/__old__/: naive_old.cu  naive_old.cuh
src/kernels/: naive.cu  naive.cuh  thread_block.cu  thread_block.cuh
